# comfyui-oli-prompt-tools

./: .gitignore  CLAUDE.md  README.md  __init__.py  lora_loader.py  mega_string_list.py  model_name.py  node_label.py  nodes.py  oli_lora_loader.py  prompt_line_pick.py  pyproject.toml  sanitize_filename.py  test-workflow.json  utils.py  video_frame_limit.py
.github/: FUNDING.yml
examples/: mega_lora_loader.json  mega_string_list.json  model_info.json  node_label.json  prompt_line_pick.json  video_frame_limit.json
tests/: mega_string_list-on-off-api-test.json  mega_string_list-on-off-source.json  run_workflow.py
web/: oli_lora_loader.js  oli_mega_string_list.js  oli_prompt_tools.js  oli_widgets_common.js
