[project]
name = "oli-prompt-tools"
version = "0.0.1"
description = "A couple of basic tools: Mega Lora Loader, Video Frame Limiter, Seed-based Prompt Line Picker, Model Info, Node Label."
authors = [
  {name = "Olivier van Helden", email = "olivier@van-helden.net"}
]
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.9"

[tool.comfy]
PublisherId = "magicoli"
DisplayName = "Oli Prompt Tools"
Icon = ""

[project.urls]
Repository = "https://github.com/magicoli/oli-prompt-tools"
BugTracker = "https://github.com/magicoli/oli-prompt-tools/issues"
Documentation = "https://github.com/magicoli/oli-prompt-tools/wiki"
